2005-05-03  Emmanuel Dreyfus  <manu@netbsd.org>

	From Patrick McHardy <kaber@trash.net>
	* src/racoon/{pfkey.c|handler.h|hendler.c}: on phase 2 acquire,
	  lookup phase 2 by (src, dst, policy id) so that multiple SA can
	  be used in transport mode

2005-04-26  Emmanuel Dreyfus  <manu@netbsd.org>

	From Larry Baird <lab@gta.com>
	* src/racoon/nattraversal.c: Fix NAT-T initiator problem

2005-04-25  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/libipsec/{ipsec_dump_policy.c|pfkey_dump.c|libpfkey.h}:
	  src/setkey/{setkey.8|setkey.c}: add a -p option to setkey to
	  enable the display of ESP over UDP ports in policies.

	* src/racoon/{isakmp.c|isakmp_cfg.c|isakmp_inf.c|pfkey.c}: don't
	  forget port numbers so that mutiple clients behind the same NAT
	  can work.

	* src/racoon/ipsec_doi.c: fix LP64 bug

	From Larry Baird <lab@gta.com>
	* src/racoon/{isakmp.c|nattraversal.c|isakmp_quick.c|nattraversal.h}:
	  NAT-T fixes for interoperability with greenbow VPN client.

2005-04-19  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/handler.h: added a flag to identify generated policies
	* src/racoon/isakmp.c: changed logging in isakmp_ph1expire()
	* src/racoon/isakmp_inf.c: use iph2->generated_spidx to check if
	  policy have been generated in purge_remote_spi()
	* src/racoon/isakmp_quick.c: sets iph2->generated_spidx for
	  generated policies
	* src/racoon/pfkey.c: reactivated the unbindph12() in pk_recvupdate()

2005-04-18  Aidas Kasparas  <a.kasparas@gmc.lt>

	* src/racoon/crypto_openssl.c: fixed single DES support;

2005-04-18  Emmanuel Dreyfus  <manu@netbsd.org>

	From Thomas Klausner <wiz@NetBSD.org>
	* src/libipsec/{ipsec_set_policy.3|ipsec_strerror.3}
	  src/racoon/{admin.c|plainrsa-gen.8|racoon.8|racoon.conf.5|racoonctl.8}
	  src/racoon/samples/{racoon.conf.in|racoon.conf.sample}
	  src/racoon/samples/racoon.conf.sample-gssapi
	  src/racoon/samples/racoon.conf.sample-inherit
	  src/racoon/samples/racoon.conf.sample-natt